# java-keytar

./: .gitignore  LICENSE  README.md  pom.xml
.github/workflows/: ci.yml
docker/arm64-cross-compile/: Dockerfile
docker/i386/: Dockerfile
lib/keytar/: .gitignore  CMakeLists.txt
lib/keytar/keytar-core/: keytar_mac.cc  keytar_posix.cc  keytar_win.cc
lib/keytar/keytar-core/include/: credentials.h  keytar.h
lib/keytar/src/: com_starxg_keytar_Keytar.h  keytar.cc
src/main/java/com/starxg/keytar/: Keytar.java  KeytarException.java
src/main/resources/: libkeytar-darwin-arm64.dylib  libkeytar-darwin-x64.dylib
src/test/java/com/starxg/keytar/: KeytarTest.java
